# location-compass

./: .gitignore  README.md  location-compass.code-workspace  pyproject.toml
platformio/compass-calibration/: platformio.ini
platformio/compass-calibration/src/: calibration.h  data.h  main.cpp
platformio/compass-logger/: platformio.ini
platformio/compass-logger/src/: main.cpp
platformio/location-compass/: .gitignore  platformio.ini
platformio/location-compass/lib/: README
platformio/location-compass/src/: calibration.h  helpers.h  locations.h  main.cpp
platformio/preferences-test/src/: main.cpp
scripts/compass-calibration/: calibration.py  compass-calibration.ipynb  real_time_data_visualization.py  visualize.py
scripts/location-data/: calculate-direction.ipynb
